force-app/main/default/objects/SandboxProfileSetup__c/SandboxProfileSetup__c.object-meta.xml
<CustomObject>
    <description>Standard setups for a sandbox, to allow a user to select a general configuration versus a specific profile/role/permission set configuration</description>
    <label>Sandbox Profile Setup</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Sandbox Profile Setup Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sandbox Profile Setups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>