force-app/main/default/objects/SandboxProfileSetup__c/fields/ApprovalNeeded__c.field-meta.xml
<CustomField>
    <fullName>ApprovalNeeded__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is approval needed for a user to be setup with this profile in the sandbox?</inlineHelpText>
    <label>Approval Needed</label>
    <type>Checkbox</type>
</CustomField>