force-app/main/default/objects/SandboxProfileSetup__c/fields/DelegatedAdminGroup__c.field-meta.xml
<CustomField>
    <fullName>DelegatedAdminGroup__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>If the user needs to be added to a Delegated Admin group, include the name of the group here.</inlineHelpText>
    <label>Delegated Admin Group</label>
    <length>80</length>
    <type>Text</type>
</CustomField>