force-app/main/default/objects/SandboxProfileSetup__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Description to show to the users for this setup</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>