force-app/main/default/objects/SandboxProfileSetup__c/fields/PermissionSetGroupList__c.field-meta.xml
<CustomField>
    <fullName>PermissionSetGroupList__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Comma separated list of Permission Set Groups to be included in the sandbox user setup. If a User to Mirror is indicated, these will be added to that list.</inlineHelpText>
    <label>Permission Set Group List</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>