force-app/main/default/objects/SandboxProfileSetup__c/fields/PermissionSetList__c.field-meta.xml
<CustomField>
    <fullName>PermissionSetList__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The permission set names to include in the new user. Comma separated list. If a User to Mirror is included, these will be added to the permission sets for that user.</inlineHelpText>
    <label>Permission Set List</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>