force-app/main/default/objects/SandboxProfileSetup__c/fields/ProfileName__c.field-meta.xml
<CustomField>
    <fullName>ProfileName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The name of the profile</inlineHelpText>
    <label>Profile Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>