force-app/main/default/objects/SandboxProfileSetup__c/fields/RoleName__c.field-meta.xml
<CustomField>
    <fullName>RoleName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The name of the role for this setup</inlineHelpText>
    <label>Role Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>