force-app/main/default/objects/SandboxProfileSetup__c/fields/SandboxSetup__c.field-meta.xml
<CustomField>
    <fullName>SandboxSetup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Link to which setup this profile setup is for</inlineHelpText>
    <label>Sandbox Setup</label>
    <referenceTo>SandboxSetup__c</referenceTo>
    <relationshipLabel>Sandbox Profile Setups</relationshipLabel>
    <relationshipName>SandboxProfileSetups</relationshipName>
    <type>Lookup</type>
</CustomField>