force-app/main/default/objects/SandboxProfileSetup__c/fields/UserToMirror__c.field-meta.xml
<CustomField>
    <fullName>UserToMirror__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If a user is selected here, the role, profile, permission sets/groups will be pulled from this user to attempt to setup in the sandbox. If the permission set doesn&apos;t exist in the other sandbox it will not be setup.</inlineHelpText>
    <label>User To Mirror</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SandboxProfileSetups</relationshipName>
    <type>Lookup</type>
</CustomField>