force-app/main/default/objects/SandboxProfileSetup__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SandboxSetup__c</columns>
    <columns>Active__c</columns>
    <columns>ProfileName__c</columns>
    <columns>RoleName__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>